--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "tsc && node scripts/package"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "prettier": "2.5.1",
     "typescript": "^4.5.4"
   }
 }
