--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "emotettv",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/doceazedo/emotettv.git"
+  },
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
