--- a/package.json
+++ b/package.json
@@ -15,19 +15,27 @@
     "definition": "dist/index.d.ts"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "cheerio": "^1.0.0-rc.10",
     "eslint": "^8.10.0",
+    "jest": "^28.1.0",
     "prettier": "2.5.1",
     "rollup": "^2.70.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.1.5"
   }
 }
