--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "lint": "prettier --write src && eslint --fix src"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.2",
@@ -26,7 +27,9 @@
     "@typescript-eslint/parser": "^5.13.0",
     "cheerio": "^1.0.0-rc.10",
     "eslint": "^8.10.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
+    "lint-staged": "^13.0.3",
     "prettier": "2.5.1",
     "rollup": "^2.70.0",
     "rollup-plugin-delete": "^2.0.0",
@@ -37,5 +40,11 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.5"
+  },
+  "lint-staged": {
+    "*.{js,ts,svelte}": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
