--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "emotettv",
-  "version": "0.0.19",
+  "version": "1.0.0-next.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/doceazedo/emotettv.git"
   },
+  "homepage": "https://github.com/doceazedo/emotettv.git#readme",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
