--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "emotettv",
-  "version": "1.0.0-next.6",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/doceazedo/emotettv.git"
   },
-  "homepage": "https://github.com/doceazedo/emotettv.git#readme",
+  "homepage": "https://emotettv.gitbook.io",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
